2008-12-07 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_printIvalBitFields): prevent
	  NULL pointer dereference, closes #2366757

2008-11-25 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic16devices.txt,
	  sdcc/src/pic16/device.c,
	  sdcc/src/pic16/device.h: implicitly disable XINST
	  whenever CONFIG4L is set via an additional optional
	  argument to the configword directive in pic16devices.txt

2008-11-24 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/configure.ac,
	  device/lib/pic16/Makefile.common: fixed quoting issues

	* device/lib/pic16/configure,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,
	  device/lib/pic16/libdev/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/startup/Makefile.in: regenerated

	* src/pic16/main.c (_pic16_finaliseOptions): revert to
	  variant of r5216

2008-11-24 Raphael Neider <rneider AT web.de>

	* src/pic16/main.c (_pic16_finaliseOptions): do not quote the
	  argument of --asm= or --link= to allow for
	  --asm="sh script --options", the user can double quote the
	  argument if needed: --asm="'c:/program files/gpasm' -q",
	  also fix some potential buffer overflows

2008-11-19 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx:
	  fixed 2314467: sdccman.lyx: fix "--" in command line parameters
	  thanks Mauro Giachero

2008-11-16 Borut Razem <borut.razem AT siol.net>

	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.5
	* doc/sdccman.lyx: documented fixed unnamed bit-field initialization

2008-11-15 Borut Razem <borut.razem AT siol.net>

	* src/pic16/glue.c, src/SDCC.y, src/SDCCast.c, src/SDCCglue.c,
	  src/SDCCsymt.c, src/SDCCsymt.h:
	  fixed RFE #2291335 : Unnamed bit-field initialization
	* support/regression/tests/bitfields.c:
	  added test case for RFE #2291335
	* support/regression/tests/bug-1981238.c: